Falta ocultacao de maio de 2008 e espace

--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -54,6 +54,20 @@ month={Dec},
 pages={1422–1449}
 }
 
+@article{Hansen1992,
+title={\href{http://dx.doi.org/10.1016/0019-1035(92)90146-X}{A thermal model for the seasonal nitrogen cycle on Triton}},
+volume={99},
+url={http://dx.doi.org/10.1016/0019-1035(92)90146-X},
+DOI={10.1016/0019-1035(92)90146-x},
+number={2},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Hansen, Candice J. and Paige, David A.},
+year={1992},
+month={Oct},
+pages={273–288}
+}
+
 @article{Jewitt1993,
 title={\href{http://dx.doi.org/10.1038/362730a0}{Discovery of the candidate Kuiper belt object 1992 QB1}},
 volume={362},
@@ -76,6 +90,20 @@ year = {1996},
 volume = {28},
 number = {13},
 pages = {1158}
+}
+
+@article{Thomas2000,
+title={\href{http://dx.doi.org/10.1006/icar.2000.6511}{The Shape of Triton from Limb Profiles}},
+volume={148},
+url={http://dx.doi.org/10.1006/icar.2000.6511},
+DOI={10.1006/icar.2000.6511},
+number={2},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Thomas, P},
+year={2000},
+month={Dec},
+pages={587–588}
 }
 
 @Article{Rettig2001,
@@ -260,6 +288,20 @@ month={Aug},
 pages={319}
 }
 
+@article{Agnor2006,
+title={\href{http://dx.doi.org/10.1038/nature04792}{Neptune’s capture of its moon Triton in a binary-planet gravitational encounter}},
+volume={441},
+url={http://dx.doi.org/10.1038/nature04792},
+DOI={10.1038/nature04792},
+number={7090},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Agnor, Craig B. and Hamilton, Douglas P.},
+year={2006},
+month={May},
+pages={192–194}
+}
+
 @ARTICLE{Grav2007,
 title={\href{http://dx.doi.org/10.1016/j.icarus.2007.04.020}{A deeper look at the colors of the saturnian irregular satellites}},
 volume={191},
@@ -292,7 +334,8 @@ pages={1962–1976}
 title={\href{http://dx.doi.org/10.1016/B978-012088589-3/50030-X}{Triton}},
 url={http://dx.doi.org/10.1016/B978-012088589-3/50030-X},
 DOI={10.1016/b978-012088589-3/50030-x},
-journal={Encyclopedia of the Solar System},
+booktitle={Encyclopedia of the Solar System},
+chapter={26},
 publisher={Elsevier},
 author={McKinnon, W and Kirk, R},
 year={2007},
@@ -387,6 +430,20 @@ author = {Assafin, M and others},
 booktitle = {Gaia follow-up network for the solar system objects: Gaia FUN-SSO workshop proceedings. IMCCE-Paris Observatory, Paris},
 year = {2011},
 page = {85},
+}
+
+@article{Nogueira2011,
+title={\href{http://dx.doi.org/10.1016/j.icarus.2011.05.003}{Reassessing the origin of Triton}},
+volume={214},
+url={http://dx.doi.org/10.1016/j.icarus.2011.05.003},
+DOI={10.1016/j.icarus.2011.05.003},
+number={1},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Nogueira, E. and Brasser, R. and Gomes, R.},
+year={2011},
+month={Jul},
+pages={113–130}
 }
 
 @article{Ortiz2012,
