Escrevi ocultacao de maio de 2008

--- a/qualify/Qualify-altair.tex
+++ b/qualify/Qualify-altair.tex
@@ -613,11 +613,19 @@ Como o tamanho aparente de Netuno ($\approx 2\arcsec$) é da ordem do seeing, um
 
 \indent \indent Nos mesmos moldes em foram feitos observações dos caminhos de TNOs para predição de ocultações estelares (ver seção \ref{Sec: TNOs-astrometria}), o caminho de Tritão também foi observado gerando um catálogo de estrelas inclusos no catálogo WFI. Infelizmente, devido a Netuno estar passando por regiões pouco populada por estrelas brilhantes, nenhum evento pôde ser observado oriundo deste trabalho.
 
-Para 2015, antes que o catálogo WFI não cubra mais o caminho orbital de Tritão, ainda haverá uma oportunidade de observar uma ocultação estelar pelo objeto. O evento está predito para ocorrer dia 10 de Novembro de 2015 com a sombra passando pela China. Dependendo do offset da estrela e de Tritão, há possibilidade da sombra ir mais ao sul passando pelo Japão ou Austrália, onde temos colaboradores que poderão observar o evento.
+Para 2015, antes que o catálogo WFI não cubra mais o caminho orbital de Tritão, ainda haverá uma oportunidade de observar uma ocultação estelar pelo objeto. O evento está predito para ocorrer dia 10 de Novembro de 2015 com a sombra passando pela China. Dependendo do offset da estrela e de Tritão, há a possibilidade da sombra ir mais ao sul passando pelo Japão ou Austrália, onde temos colaboradores que poderão observar o evento.
 
 
-\section{Ocultação Maio/2008}
+\section{Ocultação de Maio/2008}
 \label{Sec: Netuno-maio2008}
+
+\indent \indent Em 21 de Maio de 2008 houve uma ocultação por Tritão cuja sombra cruzou o sul da África. Dos sítios que observaram, apenas duas cordas foram positivas. As observações foram feitas de La Réunion e da Namíbia com câmeras rápidas. Dentre elas, uma observou somente a atmosfera do objeto. Foi a segunda ocultação de Tritão, sendo a primeira observada em Julho de 1997 \citep{Elliot2000}.
+
+Os perfis de pressão da atmosfera de Tritão foram calculadas, porém, devido a uma das cordas ter pego somente atmosfera, não foi possível determinar a posição das cordas em relação ao corpo com precisão. Isso resultou em valores com barras de erro muito grandes comparadas às encontradas na literatura.
+
+\cite{Hansen1992} obteve que a pressão atmosférica de Tritão em sua superfície estaria em ascensão. Neste trabalho, a pressão atmosférica foi obtida com um valor muito diferente do valor esperado mesmo ao nível de $3\sigma$. O resultado obtido também é inconsistente com outros valores da literatura que confirmam o esperado por \cite{Hansen1992}.
+
+Para recuperar essa ocultação, um trabalho astrométrico deve ser feito de forma a medir com precisão maior a posição do centro do corpo no instante da ocultação. Dessa forma, será possível localizar as cordas observadas às suas respectivas latitudes diminuindo as barras de erro.
 
 
 \section{Telemetria de sondas, marés}
