--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -106,6 +106,20 @@ month={Dec},
 pages={587–588}
 }
 
+@article{Elliot2000,
+title={\href{http://dx.doi.org/10.1006/icar.2000.6508}{The Prediction and Observation of the 1997 July 18 Stellar Occultation by Triton: More Evidence for Distortion and Increasing Pressure in Triton’s Atmosphere}},
+volume={148},
+url={http://dx.doi.org/10.1006/icar.2000.6508},
+DOI={10.1006/icar.2000.6508},
+number={2},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Elliot, J. and Person, M. J. and McDonald, S. W. and others},
+year={2000},
+month={Dec},
+pages={347–369}
+}
+
 @Article{Rettig2001,
 title={\href{http://dx.doi.org/10.1006/icar.2001.6715}{Implied Evolutionary Differences of the Jovian Irregular Satellites from a BVR Color Survey}},
 volume={154},
