terminei telemetria e perspectivas

--- a/qualify/Qualify-altair.tex
+++ b/qualify/Qualify-altair.tex
@@ -631,13 +631,37 @@ Para recuperar essa ocultação, um trabalho astrométrico deve ser feito de for
 \section{Telemetria de sondas, marés}
 \label{Sec: Netuno-mares}
 
-\indent \indent Para o Doutorado sanduíche, irei trabalhar com as posições do OPD para estudar os efeitos de maré no sistema Netuno-Tritão. A vantagem desse banco de dados é sua cobertura temporal e grande número de observações que pode compensar falta de precisão ao se focar em efeitos dinâmicos de longo período \citep{Lainey2012}.
+\indent \indent Para o Doutorado sanduíche, irei trabalhar com as posições do OPD para estudar os efeitos de maré no sistema Netuno-Tritão. A vantagem desse banco de dados é sua cobertura temporal e grande número de observações que pode compensar falta de precisão, se comparada a posições oriundas de sondas, ao se focar em efeitos dinâmicos de longo período \citep{Lainey2012}.
+
+Além das posições de solo, irei trabalhar com posições telemétricas de sondas espaciais dentro do projeto ESPaCE (European Satellite PArtnership for Computing Ephemerides). Esse projeto tem por objetivo extrair e analisar dados astrométricos de medidas feitas por sondas espaciais e utilizá-las para cálculo de órbitas e geração de efemérides dos objetos dos Sistema Solar. Essas medidas são ultra precisas e poderão prover novos modelos dinâmicos para muitos satélites naturais\footnote{\url{http://espace.oma.be/}}.
+
+A combinação desses dois bancos de dados, junto com as posições publicadas na literatura permitirá estudar efeitos dissipativos de energia no interior de Tritão. Como dito na seção \ref{Sec: Netuno-intro}, a circularização da órbita de Tritão, a partir de uma órbita altamente excêntrica, após a captura aconteceu por dissipação oriunda de efeitos de maré \citep{Nimmo2015}.
+
+Durante a circularização da órbita, o aquecimento causado por efeito de maré teria aumentado chegando a um fluxo de calor de $\approx 2 - 4 W m^{-2}$, comparáveis às medidas atualmente para Io. Após o aquecimento, o interior de Tritão começou a esfriar, mas mesmo hoje esse esfriamento não deve ter sido completado \citep{McKinnon2007}.
+
+Pela órbita de Tritão ser retrógrada, espera-se que sua órbita diminua devido ao efeito de maré que provoca em Netuno e seja destruído ao se aproximar do planeta devido à força de maré provocada por Netuno \citep{McKinnon2007}. Estima-se que a órbita de Tritão encolha em aproximadamente 15\% nos próximos 5 bilhões de anos.
 
 
-\chapter{Perspectivas}
+\chapter{Conclus\~ao e Perspectivas}
 \label{Cap: perspectivas}
 
-\indent \indent 
+\indent \indent Esse trabalho tem por objeto estudar os objetos do Sistema Solar exterior, de forma a obter características físicas e dinâmicas relevantes para entender a formação e evolução do Sistema Solar. As técnicas utilizadas consistem em obter posições astrométricas precisas para integração orbital e geração de efemérides. Além disso, prever, observar e reduzir ocultações estelares por esses objetos e obter seus parâmetros físicos (tamanho, forma, albedo, densidade, presença de atmosfera, satélites ou anéis).
+
+Participo ativamente em observações de TNOs, satélites, e estrelas com o objetivo de melhorar as efemérides e/ou predição de ocultações. Nesse âmbito já escrevi 1 trabalho que está aceito para publicação: \cite{GomesJunior2015-Irregular}; e contribuo em 2 trabalhos submetidos: \cite{Camargo2015} e \cite{Desmars2015}.
+
+A busca pela predição de uma ocultação e sua melhoria na era pré-GAIA vai demandar ainda diversas missões observacionais. Quando o catálogo do GAIA for lançado, as posições das estrelas serão boas o suficientes para não precisar mais de acompanhamento, porém os objetos do Sistema Solar ainda precisaram ser observados e suas efemérides melhoradas pois serão, portanto, a única fonte de erro na predição de uma ocultação.
+
+Observar uma ocultação pode revelar características inesperadas e fornecerá um rico conhecimento dos mistérios do Sistema Solar. Exemplos disso são a descoberta de um sistema de anéis, estrutura antes conhecida apenas nos planetas gigantes, ao redor de um Centauro e a identificação de um alto albedo geométrico em Eris, objeto que está muito distante do Sol e possui um tamanho similar ao de Plutão e Tritão. Esses dois trabalhos foram publicados em \cite{BragaRibas2014} e \cite{Sicardy2011}, respectivamente, nos quais contribuí em caráter observacional.
+
+Particularmente, Plutão possui um interesse especial. Ele é um planeta anão que possui atmosfera, cinco satélites, sendo que o maior deles possui um diâmetro pouco maior que a metade do de Plutão, e está prestes a ser visitado por uma sonda espacial. Ocultações estelares por esse objeto permitirá estudar a evolução de sua atmosfera, a qual será calibrada a partir de observações oriundas da sonda \textit{New Horizons}. Para isso uma ocultação que ocorrerá próxima à data da chegada da sonda está sendo planejada e muitos observadores mobilizados. Das observações às quais participei, dois estudos sobre a atmosfera de Plutão puderam ser feitos, um publicado: \cite{Olkin2015}; e outro está submetido: \cite{DiasOliveira2015}.
+
+Da mesma forma que para Plutão, Ceres é um planeta anão e está sendo visitado por uma sonda. A partir de duas ocultações, calculamos o tamanho de Ceres e obtivemos posições muito precisas. Os resultados foram publicados em \cite{GomesJunior2015-Ceres} e serviram como aprendizado pessoal quanto à utilização da técnica. Quando os resultados da sonda \textit{Dawn} forem publicados, será possível calibrar a técnica de ocultações estelares utilizada nesse trabalho.
+
+Muitos outros objetos estão na lista para se observar ocultações estelares, todos com grandes potenciais científicos. Por exemplo, há a possibilidade de que o Centauro (2060) Chiron também possua anéis \citep{Ruprecht2015}. Como o número de ocultações detectadas pelo nosso grupo vem aumentando ao longo do tempo e aumentará muito mais com o GAIA, diversas publicações ainda estão por vim.
+
+Dentre os objetos a serem ocultados, inserimos na lista os satélites irregulares dos planetas gigantes, nunca antes observados por ocultações. Diversas ocultações já estão preditas e publicação destas predições está em preparação. Observações de ocultações por Himalia, satélite de Júpiter, e Tritão para esse ano estão sendo preparadas.
+
+Por fim, estudos sobre efeitos de maré no sistema Netuno-Tritão para obter parâmetros internos do satélites serão feitos durante o Doutorado Sanduíche que ocorrerá na França em colaboração com o Doutor Valéry Lainey. Nesse trabalho, focaremos na obtenção de posições astrométricas do sistema a partir de imagens de solo observadas no OPD e de sondas espaciais dentro do projeto ESPaCE.
 
 
 \bibliography{Referencias}
