--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -693,6 +693,19 @@ month={Jan},
 pages={2–10}
 }
 
+@article{Ruprecht2015,
+title={\href{http://dx.doi.org/10.1016/j.icarus.2015.01.015}{29 November 2011 stellar occultation by 2060 Chiron: Symmetric jet-like features}},
+volume={252},
+url={http://dx.doi.org/10.1016/j.icarus.2015.01.015},
+DOI={10.1016/j.icarus.2015.01.015},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Ruprecht, Jessica D. and Bosh, Amanda S. and Person, Michael J. and others},
+year={2015},
+month={May},
+pages={271–276}
+}
+
 @Article{Camargo2015,
 author = {Camargo, J.I.B. and Magalhães, F.P. and Vieira-Martins, R. and others},
 title = {Astrometry of the main satellites of Uranus: 18 years of observations},
